[gd_scene load_steps=21 format=3 uid="uid://jd4lm87dcry3"]

[ext_resource type="Script" uid="uid://duoa61a7pv80t" path="res://Scripts/enemy_slime.gd" id="1_p1xxi"]
[ext_resource type="Texture2D" uid="uid://d0ctu414c7f8a" path="res://AssetBundle/Sprites/Slimer.png" id="1_u8tem"]
[ext_resource type="Texture2D" uid="uid://bt3f7biux7idp" path="res://AssetBundle/Sprites/SlimerDeath.png" id="2_7yyg5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xsyo3"]
atlas = ExtResource("2_7yyg5")
region = Rect2(0, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_oi5nh"]
atlas = ExtResource("2_7yyg5")
region = Rect2(64, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmdr4"]
atlas = ExtResource("2_7yyg5")
region = Rect2(128, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mnvw"]
atlas = ExtResource("2_7yyg5")
region = Rect2(192, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_h65gf"]
atlas = ExtResource("2_7yyg5")
region = Rect2(256, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_ri7b6"]
atlas = ExtResource("2_7yyg5")
region = Rect2(320, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_tu4ju"]
atlas = ExtResource("2_7yyg5")
region = Rect2(384, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_ey7an"]
atlas = ExtResource("1_u8tem")
region = Rect2(0, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5bcy"]
atlas = ExtResource("1_u8tem")
region = Rect2(41, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_a62tw"]
atlas = ExtResource("1_u8tem")
region = Rect2(82, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ep3m"]
atlas = ExtResource("1_u8tem")
region = Rect2(123, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8r00"]
atlas = ExtResource("1_u8tem")
region = Rect2(164, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwctv"]
atlas = ExtResource("1_u8tem")
region = Rect2(205, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nyao"]
atlas = ExtResource("1_u8tem")
region = Rect2(246, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsrll"]
atlas = ExtResource("1_u8tem")
region = Rect2(287, 0, 41, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_3km2d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsyo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oi5nh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmdr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mnvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h65gf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ri7b6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tu4ju")
}],
"loop": false,
"name": &"Death",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ey7an")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5bcy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a62tw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ep3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8r00")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwctv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nyao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsrll")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_aog8b"]

[node name="Slime" type="Area2D"]
script = ExtResource("1_p1xxi")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3km2d")
animation = &"Death"
autoplay = "Idle"
frame = 6
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("CircleShape2D_aog8b")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
